--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 boto3==1.3.1
 botocore==1.4.13
 docutils==0.12
+funcsigs==1.0.2
 futures==3.0.5
 jmespath==0.9.0
+mock==2.0.0
+pbr==1.9.1
 python-dateutil==2.5.3
 git+https://github.com/thepwagner/python-systemd.git
