--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,6 @@ futures==3.0.5
 jmespath==0.9.0
 mock==2.0.0
 pbr==1.9.1
+pycrypto==2.6.1
 python-dateutil==2.5.3
 git+https://github.com/pebble/python-systemd.git
