--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ boto3==1.3.1
 botocore==1.4.66
 click==6.2
 docutils==0.12
+eight==0.3.3
 funcsigs==1.0.2
+future==0.15.2
 futures==3.0.5
 jmespath==0.9.0
 mock==2.0.0
@@ -10,3 +12,4 @@ pbr==1.9.1
 pycrypto==2.6.1
 python-dateutil==2.5.3
 git+https://github.com/pebble/python-systemd.git
+watchtower==0.3.3
