--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -1,22 +1,25 @@
-FROM alpine:3.4
+FROM debian:jessie
 
 COPY requirements.txt /app/requirements.txt
 COPY src/test/requirements.txt /app/test-requirements.txt
 
-RUN apk add --update \
+
+RUN apt-get update && apt-get -y --no-install-recommends install \
     git \
     g++ \
     python \
     python-dev \
-    py-pip \
-    py-dbus \
+    python-pip \
+    python-dbus \
   && pip install -r /app/requirements.txt \
   && pip install -r /app/test-requirements.txt \
-  && apk del \
+  && apt-get remove --purge --auto-remove -y \
+     gcc \
      git \
      g++ \
+     perl-modules \
      python-dev \
-  && rm -rf /var/cache/apk/*
+  && rm -rf /tmp/* /var/tmp/
 
 COPY src/ /app
 WORKDIR /app
